--- a/content/index.mdx
+++ b/content/index.mdx
@@ -1,34 +1,57 @@
-# Welcome to Focusmo Documentation
+# Introduction to SupaSidebar
+Learn what SupaSidebar is and what it can do for you.
 
-Focusmo is the ultimate focus and productivity app designed to help you accomplish more with less distraction. Available for macOS and iOS, Focusmo provides powerful tools to manage your time, track your progress, and maintain deep focus.
+## What is SupaSidebar?
 
-## What is Focusmo?
+SupaSidebar is a productivity sidebar for macOS that helps you instantly access your most-used files, folders, apps, and websites - all from a single unified panel. It simplifies your workflow by keeping your essential resources organized and within reach, eliminating the need to constantly switch between Finder, browsers, and other apps.
 
-Focusmo combines proven productivity techniques with modern technology to create a comprehensive focus management system. Whether you're a student, professional, or creative, Focusmo helps you:
+At its core, SupaSidebar acts as a universal launcher and organizational hub built specifically for macOS. Whether you're managing multiple projects, researching online, or juggling creative tools, SupaSidebar provides instant access and seamless navigation so you can stay focused on what matters most.
 
-- **Stay focused** with timer-based work sessions
-- **Track progress** with detailed analytics
-- **Manage tasks** with an intuitive task management system
-- **Block distractions** with workspace automation (macOS)
-- **Build habits** with consistent productivity routines
+But SupaSidebar goes beyond simple file or link management. It is designed to integrate naturally into your workflow - providing quick global shortcuts, intelligent search, and customizable Spaces that adapt to how you work. Every interaction is optimized for speed, simplicity, and focus, making it an indispensable tool for anyone who values efficiency.
 
-## Key Features
 
-- 🍅 **Pomodoro Timer** - Classic 25-minute focus sessions with breaks
-- ⏱️ **Custom Timers** - Set any duration for focused work
-- 📊 **Analytics** - Track your productivity patterns and progress
-- 🚫 **App Blocking** - Block distracting apps during focus sessions (macOS)
-- 📱 **Cross-Platform** - Seamless experience across macOS and iOS
-- 🎯 **Task Management** - Organize and prioritize your work
+## Who is SupaSidebar For?
 
-## Getting Started
+SupaSidebar is ideal for anyone who works across multiple tools and wants a more organized, efficient, and distraction-free way to manage digital resources. From professionals to students, it adapts to diverse workflows and use cases.
 
-Ready to boost your productivity? Check out our [Installation Guide](/getting-started/installation) to get Focusmo set up on your devices.
+### Professionals and Knowledge Workers
+For professionals handling multiple files, reports, and applications daily, SupaSidebar provides a single access point for all essential resources. Quickly open recent files, pin key folders, and organize projects into dedicated Spaces - helping reduce clutter and saving valuable time spent switching contexts.
 
-## Need Help?
+### Designers and Developers
+Designers and developers often work with numerous assets, repositories, and documentation sources. SupaSidebar streamlines this process by letting you save design files, project directories, GitHub links, and documentation pages all in one sidebar. With quick search and keyboard shortcuts, you can move fluidly between tools without breaking your creative or coding flow.
 
-- Browse our [Features](/features/overview) to learn about all capabilities
-- Read our [Guides](/guides/basics) for tips and best practices
-- Contact support at support@focusmo.app
+### Students and Researchers
+Students, academics, and researchers can use SupaSidebar as a centralized hub for notes, references, and research materials. Create separate Spaces for each subject or project, organize web links and PDFs, and access them instantly when needed - allowing you to focus more on learning and less on finding files.
 
-Let's help you focus better and accomplish more! 🚀
+### Content Creators and Freelancers
+Writers, editors, and content creators manage countless templates, media files, and creative resources. SupaSidebar keeps everything organized in one easily accessible place. Pin frequently used folders, organize ongoing projects, and streamline your entire workflow to minimize friction and maximize output.
+
+### Anyone Seeking a Unified Digital Workspace
+SupaSidebar is not just for professionals - it’s for anyone who values simplicity, speed, and structure in their daily computer use. If you frequently switch between Finder, browsers, and multiple apps, SupaSidebar helps consolidate them into one cohesive, easy-to-navigate sidebar, enhancing focus and reducing digital clutter.
+
+
+## Key Benefits
+
+### Unified Access
+Access files, folders, and links from a single sidebar without opening multiple Finder windows or browser tabs.
+
+### Smart Organization
+Organize items into customizable Spaces. Use Favorites for essential shortcuts and Recents to quickly revisit recently accessed content.
+
+### Instant Search
+Find anything in seconds using a global shortcut (`CMD CTRL K`). SupaSidebar indexes your saved items so you can locate files, folders, and web links instantly.
+
+### Seamless Integration
+Works across major browsers including Safari, Chrome, Firefox, Arc, and Brave. Add items directly from Finder or browsers using Smart Save (`CMD CTRL S`) and Smart Copy (`CMD CTRL C`).
+
+### Lightweight and Optimized
+Designed for macOS performance, SupaSidebar runs efficiently in the background without slowing your system.
+
+
+## Supported Platforms & System Requirements
+
+- **Platform:** macOS (optimized for Apple Silicon and Intel-based Macs)  
+- **Browsers Supported:** Safari, Chrome, Firefox, Arc, Brave  
+- **Minimum macOS Version:** macOS 13 Ventura or later  
+- **Storage Requirement:** Less than 100 MB  
+- **Internet Connection:** Required for syncing and license activation (optional for offline use after setup)
