added integration docs

--- a/content/index.mdx
+++ b/content/index.mdx
@@ -3,7 +3,7 @@ Learn what SupaSidebar is and what it can do for you.
 
 ## What is SupaSidebar?
 
-SupaSidebar is a productivity sidebar for macOS that helps you instantly access your most-used files, folders, apps, and websites - all from a single unified panel. It simplifies your workflow by keeping your essential resources organized and within reach, eliminating the need to constantly switch between Finder, browsers, and other apps.
+**SupaSidebar** is a menubar app designed for Mac that helps you save links, files, and folders from any browser or Finder with just a click. It offers **multi-browser support**, **global keyboard shortcuts**, and a seamless user experience, making it the perfect productivity companion for Mac users.
 
 At its core, SupaSidebar acts as a universal launcher and organizational hub built specifically for macOS. Whether you're managing multiple projects, researching online, or juggling creative tools, SupaSidebar provides instant access and seamless navigation so you can stay focused on what matters most.
 
