feat: add comprehensive documentation for new features including browser integration, smart shortcuts, and workspace management

--- a/content/shortcuts.mdx
+++ b/content/shortcuts.mdx
@@ -88,6 +88,8 @@ The **⌘⌃S** (Smart Save) and **⌘⌃C** (Smart Copy) shortcuts are context-
 - **In Finder**: Save/copy selected files or folders
 - **Anywhere Else**: Defaults to browser behavior
 
+**Learn more:** [Smart Shortcuts →](features/smartShortcuts) - Complete guide to context-aware shortcuts
+
 ### Customizing Shortcuts
 
 You can customize most global shortcuts in **Preferences → Shortcuts**:
