Enhance browser integration section with visuals
Added a diagram and logos for browser integration.

--- a/content/features/browserIntegration.mdx
+++ b/content/features/browserIntegration.mdx
@@ -13,7 +13,17 @@ SupaSidebar integrates seamlessly with 14 major web browsers through AppleScript
 
 ## How It Works
 
-[PLACEHOLDER: Diagram showing SupaSidebar connecting to multiple browsers via AppleScript]
+<div style={{ display: 'flex', alignItems: 'center', justifyContent: 'center', gap: '2rem' }}>
+  <img src="/assets/logos/supasidebar-logo.png" alt="SupaSidebar Logo" width="80" />
+  <span style={{ fontSize: '2rem' }}>→</span>
+  <div style={{ display: 'grid', gridTemplateColumns: 'repeat(5, auto)', gap: '1.5rem' }}>
+    <img src="/assets/logos/safari-logo.png" alt="Safari" width="60" />
+    <img src="/assets/logos/chrome-logo.png" alt="Chrome" width="60" />
+    <img src="/assets/logos/firefox-logo.png" alt="Firefox" width="60" />
+    <img src="/assets/logos/edge-logo.png" alt="Edge" width="60" />
+    <img src="/assets/logos/brave-logo.png" alt="Brave" width="60" />
+  </div>
+</div>
 
 SupaSidebar uses AppleScript to communicate with browsers, enabling seamless integration without browser extensions:
 - **Smart Save & Copy**: Context-aware shortcuts that work across all browsers
