Add screenshots for Smart Copy and Smart Save
Added images demonstrating Smart Copy and Smart Save functionality.

--- a/content/features/browserIntegration.mdx
+++ b/content/features/browserIntegration.mdx
@@ -32,7 +32,17 @@ Press the same shortcuts in any browser or Finder - SupaSidebar automatically do
 - **⌘⌃S (Smart Save)**: Save browser pages OR add Finder items
 - **⌘⌃C (Smart Copy)**: Copy URLs OR file paths
 
-[PLACEHOLDER: Screenshot showing Smart Save in browser, then Finder]
+<img 
+  src="f21a6616-af28-4d66-b131-afec7657162e.png" 
+  alt="Smart Copy example showing URL Copied" 
+  width="600"
+/>
+
+<img 
+  src="31e76324-4ec3-4495-b080-d1ecdb15423c.png" 
+  alt="Smart Save example showing Page Saved" 
+  width="600"
+/>
 
 **Works with:**
 - All 14 supported browsers
