Update browser integration instructions
Removed instructions for Smart Save and Smart Copy features.

--- a/content/features/browserIntegration.mdx
+++ b/content/features/browserIntegration.mdx
@@ -90,18 +90,13 @@ Control exactly which browser opens each link with flexible options:
    - Find SupaSidebar
    - Enable checkboxes for browsers you use
 
-2. **Try Smart Save:**
-   - Open any browser
-   - Navigate to a webpage
-   - Press **⌘⌃S**
-   - Page added to sidebar!
-
-3. **Try Smart Copy:**
-   - With browser active
-   - Press **⌘⌃C**
-   - URL copied to clipboard
-
-[PLACEHOLDER: Screenshot showing Automation permissions]
+<a href="https://your-link-here.com" target="_blank" rel="noopener noreferrer">
+  <img
+    src="./c40c3066-67e1-42ae-b6b0-197de46713ba.png"
+    alt="Automation settings for SupaSidebar"
+    width="600"
+  />
+</a>
 
 ### Common Workflows
 
