Update Quick Start by removing Smart Save and Copy steps
Removed steps for trying Smart Save and Smart Copy from the Quick Start section.

--- a/content/features/browserIntegration.mdx
+++ b/content/features/browserIntegration.mdx
@@ -105,21 +105,11 @@ Control exactly which browser opens each link with flexible options:
 
 ### Setup (2 minutes)
 
-1. **Grant Automation Permissions:**
+ **Grant Automation Permissions:**
    - System Settings → Privacy & Security → Automation
    - Find SupaSidebar
    - Enable checkboxes for browsers you use
 
-2. **Try Smart Save:**
-   - Open any browser
-   - Navigate to a webpage
-   - Press **⌘⌃S**
-   - Page added to sidebar!
-
-3. **Try Smart Copy:**
-   - With browser active
-   - Press **⌘⌃C**
-   - URL copied to clipboard
 
 [PLACEHOLDER: Screenshot showing Automation permissions]
 
