Update Quick Start by removing Smart Save and Copy steps (#7)
Removed steps for trying Smart Save and Smart Copy from the Quick Start section.

Co-authored-by: Kshetez Vinayak <100942053+auspy@users.noreply.github.com>

--- a/content/features/browserIntegration.mdx
+++ b/content/features/browserIntegration.mdx
@@ -105,7 +105,7 @@ Control exactly which browser opens each link with flexible options:
 
 ### Setup (2 minutes)
 
-1. **Grant Automation Permissions:**
+ **Grant Automation Permissions:**
    - System Settings → Privacy & Security → Automation
    - Find SupaSidebar
    - Enable checkboxes for browsers you use
