Revise browser selection documentation
Updated browser selection guide with detailed instructions and workflows for using SupaSidebar.

--- a/content/features/browserSelection.mdx
+++ b/content/features/browserSelection.mdx
@@ -11,413 +11,44 @@ Choose which browser opens your saved links - assign specific browsers per link,
 - **Multi-account management**: Separate work and personal accounts across browsers
 - **Testing workflows**: Open same link in different browsers for cross-browser testing
 
-## How It Works
 
-[PLACEHOLDER: Video showing user opening links with different browsers, using browser picker, and setting default browsers]
+## Browser Selection – Simple Steps Guide
 
-SupaSidebar remembers which browser you want to use for each link and provides multiple ways to choose:
+This section explains **all the ways users can select a browser** inside Supa Sidebar. This is useful for multi‑browser users who want to quickly change where a link opens.
 
-**Per-Link Assignment:**
-Right-click any link → Set Browser → Choose once, use forever
+---
 
-**Active Browser Mode:**
-Links open in whatever browser you're currently using
+## Ways to Select a Browser
 
-**Always Ask Mode:**
-Shows browser picker every time you open a link
+### **1. Right‑Click → Open With**
+- Right‑click on any link.
+- Choose **“Open With…”** from the context menu.
+- Pick any installed browser.
 
-**One-Time Selection:**
-⌥Click or ⌥Return to choose browser for just this time
+---
 
-## Browser Opening Behaviors
+### **2. Option‑Click on a Link**
+- Hold **Option (⌥)** and click a link.
+- Supa Sidebar opens a browser selection popup.
+- Choose the browser you want.
 
-### Assigned Browser (Default)
+---
 
-Each link remembers which browser it should open in.
+### **3. Option + Enter from Command Panel**
+- Open the **Command Panel**.
+- Select a link or command that involves opening a webpage.
+- Press **Option + Enter (⌥ + Return)**.
+- Choose the browser from the popup.
 
-**How It Works:**
-1. Save a link from Chrome → Automatically assigned to Chrome
-2. Can change assignment: Right-click → Set Browser → Choose new browser
-3. Opening that link always uses assigned browser
+---
 
-**Best For:**
-- Consistent workflows
-- Site-specific browser requirements
-- Organizing by context (work vs. personal)
+## Notes
+- The browser selection popup only appears when using shortcuts or modifier keys (Option‑Click, Option‑Enter).
+- Your last used browser may be remembered depending on user settings.
+- All three methods work for **links, tabs, and certain URL‑related commands**.
 
-[PLACEHOLDER: Screenshot showing link with browser badge indicating Chrome]
+---
 
-**Example Workflow:**
-- Gmail → Always Chrome (work account)
-- iCloud → Always Safari (personal account)
-- GitHub → Always Firefox (development)
-- Each link opens in its designated browser
-
-### Active Browser Mode
-
-Links open in whichever browser is currently active (frontmost).
-
-**Enable:**
-1. Open **Preferences → General**
-2. Set **Link Opening Behavior** to **Use active browser**
-
-**How It Works:**
-- Click link while Chrome is active → Opens in Chrome
-- Switch to Safari, click same link → Opens in Safari
-- Dynamic behavior based on current browser
-
-**Best For:**
-- Research workflows with single browser
-- Avoiding browser switching
-- Testing links in multiple browsers
-- Ad-hoc browsing sessions
-
-[PLACEHOLDER: Diagram showing same link opening in different browsers based on active browser]
-
-**Example Workflow:**
-1. Working in Chrome all day
-2. All links open in Chrome automatically
-3. Switch to Firefox for testing
-4. Same links now open in Firefox
-5. No manual browser selection needed
-
-### Always Ask Mode
-
-Browser picker appears every time you open a link.
-
-**Enable:**
-1. Open **Preferences → General**
-2. Set **Link Opening Behavior** to **Always ask**
-
-**How It Works:**
-- Click any link
-- Browser picker popover appears
-- Choose browser
-- Link opens
-
-**Best For:**
-- Users who like explicit control
-- Frequently switching between browsers
-- Testing and development workflows
-- Indecisive browser preferences
-
-[PLACEHOLDER: Screenshot showing browser picker popover with all 14 browsers]
-
-**Example Workflow:**
-1. Click link in sidebar
-2. See browser picker: Safari, Chrome, Firefox, Arc...
-3. Choose Firefox for this time
-4. Link opens in Firefox
-5. Next link, repeat choice
-
-## Setting Default Browser for Links
-
-### When Saving Links
-
-Links automatically remember which browser you saved them from:
-
-**Automatic Assignment:**
-- Save from Chrome → Link assigned to Chrome
-- Save from Safari → Link assigned to Safari
-- Save from Firefox → Link assigned to Firefox
-
-[PLACEHOLDER: Screenshot showing newly saved link with browser badge]
-
-### Changing Browser Assignment
-
-**For Single Link:**
-1. Right-click the link in sidebar
-2. Select **Set Browser**
-3. Choose new browser
-4. Assignment updated
-
-[PLACEHOLDER: Screenshot of context menu showing "Set Browser" option]
-
-**For Multiple Links:**
-1. Select multiple links (⇧↑/↓)
-2. Right-click selection
-3. Select **Set Browser**
-4. Choose browser
-5. All selected links updated
-
-### Removing Browser Assignment
-
-**Reset to System Default:**
-1. Right-click link
-2. Select **Set Browser**
-3. Choose **System Default**
-4. Link uses macOS default browser
-
-## One-Time Browser Selection
-
-Choose a browser for a single use without changing assignment.
-
-### Using Option Key + Click
-
-**Method 1: Mouse**
-1. Hold **⌥** (Option)
-2. Click link
-3. Browser picker appears
-4. Choose browser
-5. Link opens, assignment unchanged
-
-[PLACEHOLDER: Screenshot showing ⌥Click on link triggering browser picker]
-
-### Using Option Key + Return
-
-**Method 2: Keyboard**
-1. Navigate to link with ↑↓ keys
-2. Press **⌥Return**
-3. Browser picker appears
-4. Use ↑↓ to select browser
-5. Press Return to open
-6. Assignment unchanged
-
-**Keyboard-Only Workflow:**
-1. **⌘⌃K** → Open command panel
-2. Type search query
-3. **↓** → Select result
-4. **⌥Return** → Browser picker
-5. **↓** → Choose browser
-6. **Return** → Open
-
-All without touching mouse.
-
-## Browser Picker
-
-### Available Browsers
-
-The browser picker shows all installed supported browsers:
-
-**Installed Browsers:**
-- Shown at top of picker
-- Includes icon and name
-- Click or Return to select
-
-**Not Installed:**
-- Grayed out or not shown
-- Install browser to enable
-
-[PLACEHOLDER: Screenshot of browser picker showing installed vs not installed browsers]
-
-### Picker Shortcuts
-
-| Action | Shortcut |
-|--------|----------|
-| Show picker (mouse) | **⌥Click** link |
-| Show picker (keyboard) | **⌥Return** on selected link |
-| Navigate browsers | **↑** / **↓** |
-| Select browser | **Return** or **Click** |
-| Cancel | **Esc** or click outside |
-
-## Multi-Browser Workflows
-
-### Dedicate Browsers to Contexts
-
-**Professional Workflow:**
-```
-Work Space:
-├── Gmail (Chrome) - Work account
-├── Slack (Chrome) - Company workspace
-├── Jira (Chrome) - Project tracking
-└── Company Intranet (Chrome) - Corporate browser
-
-Personal Space:
-├── Gmail (Safari) - Personal account
-├── Twitter (Safari) - Social media
-├── Shopping (Safari) - Personal browsing
-└── News (Safari) - Reading
-
-Development Space:
-├── localhost:3000 (Firefox) - Dev server
-├── GitHub (Firefox) - Code repos
-├── Stack Overflow (Firefox) - Documentation
-└── MDN (Firefox) - Web docs
-```
-
-Each space uses dedicated browsers for context isolation.
-
-[PLACEHOLDER: Screenshot showing different spaces with browser badges on links]
-
-### Browser-Based Smart Folders
-
-Automatically organize links by browser:
-
-**Smart Folder: Chrome Work Links**
-1. Create Smart Folder
-2. Add condition: **Browser is "Chrome"**
-3. All Chrome links collected automatically
-
-**Smart Folder: Safari Personal**
-1. Create Smart Folder
-2. Add condition: **Browser is "Safari"**
-3. All Safari links collected automatically
-
-See [Smart Folders](smartFolders) for setup.
-
-### Testing Workflow
-
-Test same link across browsers:
-
-**Method 1: One-Time Selection**
-1. Open link with **⌥Return**
-2. Choose Chrome → Test in Chrome
-3. Open again with **⌥Return**
-4. Choose Firefox → Test in Firefox
-5. Open again with **⌥Return**
-6. Choose Safari → Test in Safari
-
-**Method 2: Active Browser Mode**
-1. Enable "Use active browser" in Preferences
-2. Switch to Chrome, click link → Opens in Chrome
-3. Switch to Firefox, click link → Opens in Firefox
-4. Switch to Safari, click link → Opens in Safari
-
-### Multi-Account Management
-
-**Work vs Personal Accounts:**
-- Gmail (Work) → Chrome with work Google account
-- Gmail (Personal) → Safari with personal Google account
-- Slack (Work) → Chrome workspace
-- Slack (Personal) → Firefox workspace
-
-Browser isolation prevents account conflicts.
-
-### Browser-Specific Features
-
-Some sites work better in specific browsers:
-
-**Safari:** Best for Apple sites (iCloud, Apple Music, etc.)
-**Chrome:** Best for Google services (Gmail, Drive, Meet)
-**Arc:** Best for design tools with workspace features
-**Firefox:** Best for privacy-focused browsing
-**Edge:** Best for Microsoft 365 services
-
-Assign links based on optimal browser performance.
-
-## Browser Window Adjustment
-
-Automatically resize browser windows to prevent sidebar overlap.
-
-### Enable Window Adjustment
-
-1. Open **Preferences → General**
-2. Set **Browser window adjustment** to desired mode:
-   - **None**: No adjustment
-   - **Minimal**: Small adjustment to prevent overlap
-   - **Fill**: Maximize browser to fill remaining space
-
-[PLACEHOLDER: Before/after screenshots showing browser window adjustment with sidebar visible]
-
-### Adjustment Modes
-
-**None:**
-- Browser windows not adjusted
-- Sidebar may overlap browser content
-- Use if you prefer manual window management
-
-**Minimal:**
-- Browser window shrinks slightly
-- Just enough to prevent sidebar overlap
-- Preserves most of your browser width
-- Recommended for most users
-
-**Fill:**
-- Browser window maximized to fill available space
-- Sidebar and browser perfectly tiled
-- Optimal screen space usage
-- Great for split-screen workflows
-
-[PLACEHOLDER: Diagram showing three adjustment modes side-by-side]
-
-### Supported Browsers
-
-Window adjustment works with:
-- Chrome
-- Edge
-- Brave
-- Vivaldi
-- Safari (limited)
-- Other Chromium-based browsers
-
-**Not Supported:**
-- Firefox (window management API limitations)
-- Arc (custom window behavior)
-- Zen (Firefox-based)
-
-## Browser Auto-Visibility
-
-Show sidebar automatically when browsers become active.
-
-### Enable Auto-Visibility
-
-1. Open **Preferences → General**
-2. Enable **Show sidebar when browser is active**
-
-**How It Works:**
-- Switch to any supported browser → Sidebar appears
-- Switch to non-browser app → Sidebar behavior unchanged
-- Automatic context-aware visibility
-
-**Best For:**
-- Research workflows with frequent browser use
-- Saving pages while browsing
-- Reducing manual sidebar toggling
-- Keyboard-first workflows
-
-[PLACEHOLDER: Video showing sidebar appearing when switching to browser]
-
-## Preferences Configuration
-
-### Link Opening Behavior
-
-**Preferences → General → Link Opening Behavior**
-
-**Options:**
-1. **Use assigned browser** (Default)
-   - Respects per-link browser settings
-   - Consistent behavior
-   - Recommended for most users
-
-2. **Use active browser**
-   - Opens in currently active browser
-   - Dynamic behavior
-   - Best for single-browser workflows
-
-3. **Always ask**
-   - Shows browser picker every time
-   - Explicit control
-   - Best for testing and flexibility
-
-[PLACEHOLDER: Screenshot of Preferences showing Link Opening Behavior options]
-
-### Browser Window Adjustment
-
-**Preferences → General → Browser window adjustment**
-
-**Options:**
-- None
-- Minimal (Recommended)
-- Fill
-
-### Auto-Visibility
-
-**Preferences → General → Show sidebar when browser is active**
-
-- ☐ Disabled (Default)
-- ☑ Enabled
-
-## Keyboard Shortcuts
-
-| Shortcut | Action |
-|----------|--------|
-| **⌥Click** | Show browser picker for clicked link |
-| **⌥Return** | Show browser picker for selected link |
-| **↑** / **↓** | Navigate browser picker |
-| **Return** | Select browser in picker |
-| **Esc** | Cancel browser picker |
-
-See [Global Shortcuts](globalShortcuts) for complete reference.
 
 ## Tips & Tricks
 
