Update browser integration content with images
Removed placeholder images and replaced them with actual images for Smart Copy and Smart Save examples. Updated the layout for better presentation.

--- a/content/features/browserIntegration.mdx
+++ b/content/features/browserIntegration.mdx
@@ -13,18 +13,6 @@ SupaSidebar integrates seamlessly with 14 major web browsers through AppleScript
 
 ## How It Works
 
-<div style={{ display: 'flex', alignItems: 'center', justifyContent: 'center', gap: '2rem' }}>
-  <img src="/assets/logos/supasidebar-logo.png" alt="SupaSidebar Logo" width="80" />
-  <span style={{ fontSize: '2rem' }}>→</span>
-  <div style={{ display: 'grid', gridTemplateColumns: 'repeat(5, auto)', gap: '1.5rem' }}>
-    <img src="/assets/logos/safari-logo.png" alt="Safari" width="60" />
-    <img src="/assets/logos/chrome-logo.png" alt="Chrome" width="60" />
-    <img src="/assets/logos/firefox-logo.png" alt="Firefox" width="60" />
-    <img src="/assets/logos/edge-logo.png" alt="Edge" width="60" />
-    <img src="/assets/logos/brave-logo.png" alt="Brave" width="60" />
-  </div>
-</div>
-
 SupaSidebar uses AppleScript to communicate with browsers, enabling seamless integration without browser extensions:
 - **Smart Save & Copy**: Context-aware shortcuts that work across all browsers
 - **14 Browsers Supported**: Safari, Chrome, Firefox, Edge, Arc, Brave, and more
@@ -42,17 +30,15 @@ Press the same shortcuts in any browser or Finder - SupaSidebar automatically do
 - **⌘⌃S (Smart Save)**: Save browser pages OR add Finder items
 - **⌘⌃C (Smart Copy)**: Copy URLs OR file paths
 
-<img 
-  src="f21a6616-af28-4d66-b131-afec7657162e.png" 
-  alt="Smart Copy example showing URL Copied" 
-  width="600"
-/>
+<br />
+<p align="center">
+  <img src="/assets/smartcopy.jpeg" alt="Smart Copy example showing URL Copied" width="800" />
+</p>
 
-<img 
-  src="31e76324-4ec3-4495-b080-d1ecdb15423c.png" 
-  alt="Smart Save example showing Page Saved" 
-  width="600"
-/>
+<br />
+<p align="center">
+<img  src="/assets/smartsave.jpeg"  alt="Smart Save example showing Page Saved" width="600" />
+</p>
 
 **Works with:**
 - All 14 supported browsers
@@ -77,7 +63,7 @@ SupaSidebar works with Safari, Chrome, Firefox, Edge, Arc, Brave, Vivaldi, Comet
 - Tab switching
 - Tab search
 
-[PLACEHOLDER: Browser compatibility matrix showing all 14 browsers]
+
 
 **Learn more:** [Browser Support →](browserSupport)
 
@@ -91,7 +77,6 @@ Control exactly which browser opens each link with flexible options:
 - **Always ask mode**: Choose every time
 - **One-time selection**: ⌥Click or ⌥Return for ad-hoc choices
 
-[PLACEHOLDER: Screenshot showing browser picker with all browsers]
 
 **Use cases:**
 - Work links in Chrome, personal in Safari
@@ -109,14 +94,10 @@ Control exactly which browser opens each link with flexible options:
    - System Settings → Privacy & Security → Automation
    - Find SupaSidebar
    - Enable checkboxes for browsers you use
-
-<a href="https://your-link-here.com" target="_blank" rel="noopener noreferrer">
-  <img
-    src="./c40c3066-67e1-42ae-b6b0-197de46713ba.png"
-    alt="Automation settings for SupaSidebar"
-    width="600"
-  />
-</a>
+<br />
+<p align="center">
+  <img src="/assets/automation real.jpeg" alt="Automation Permissions" width="800" />
+</p>
 
 ### Common Workflows
 
@@ -148,7 +129,10 @@ Real-time browser tab tracking across all supported browsers:
 - Close tabs from sidebar
 - Search tabs in Command Panel
 
-[PLACEHOLDER: Screenshot showing Live Tabs from multiple browsers]
+<br />
+<p align="center">
+  <img src="public/assets/lifetabsmultiplebrowser.jpeg" alt="livetabs" width="800" />
+</p>
 
 **Available for:** Safari, Chrome, Edge, Brave, Vivaldi, Comet, Orion, Atlas, Helium (9 browsers + more coming)
 
