Update browser support documentation with images
Removed placeholder text for visual elements and added images for automation and accessibility permissions.

--- a/content/features/browserSupport.mdx
+++ b/content/features/browserSupport.mdx
@@ -67,7 +67,6 @@ SupaSidebar provides two levels of browser integration:
 - ⏳ **In Development** - Feature coming in future update
 - ❌ **Not Available** - Feature not planned or not possible
 
-[PLACEHOLDER: Visual grid of browser logos with checkmarks for supported features]
 
 ## Setup
 
@@ -79,7 +78,11 @@ Browser integration requires **Automation permissions**:
 2. Find **SupaSidebar** in the list
 3. Enable checkboxes for all browsers you use
 
-[PLACEHOLDER: Screenshot showing System Settings automation permissions with multiple browsers enabled]
+<br />
+<p align="center">
+  <img src="/assets/automation real.jpeg" alt="Automation Permission" width="800" />
+</p>
+<br />
 
 **First Time Setup:**
 When you first use browser shortcuts, macOS will prompt for permission for each browser. Click **OK** to grant access.
@@ -96,8 +99,10 @@ Some browsers benefit from Accessibility access for enhanced features:
 **Browsers that benefit:**
 - **Comet (Perplexity)**: Enhanced URL extraction from internal URLs
 - **Other browsers**: May improve reliability in edge cases
-
-[PLACEHOLDER: Screenshot showing Accessibility permissions]
+<br />
+<p align="center">
+  <img src="/assets/accessibility mouse triggers.jpeg" alt="Accessibility" width="800" />
+</p>
 
 ### Verifying Permissions
 
