Revise Finder Integration documentation
Updated the Finder Integration documentation to include new features and setup instructions.

--- a/content/features/finderIntegration.mdx
+++ b/content/features/finderIntegration.mdx
@@ -12,7 +12,6 @@ Add files, folders, and applications directly from Finder to your sidebar with k
 
 ## How It Works
 
-[PLACEHOLDER: Screenshot showing Finder window with files selected and SupaSidebar capturing them]
 
 SupaSidebar uses AppleScript to communicate with Finder, enabling seamless file and folder management:
 - Add selected files or folders
@@ -28,7 +27,13 @@ SupaSidebar uses AppleScript to communicate with Finder, enabling seamless file 
 
 One shortcut, multiple behaviors based on context.
 
-[PLACEHOLDER: Video showing user in Finder selecting files, pressing ⌘⌃S, and items appearing in sidebar]
+<p>
+  Watch this video:
+  <a href="https://youtu.be/w5AMO-wkIgo" target="_blank">
+   Finder
+  </a>
+</p>
+
 
 **Learn more:** [Smart Shortcuts →](smartShortcuts) - Complete guide to context-aware shortcuts across browsers and Finder
 
@@ -41,8 +46,10 @@ Finder integration requires **Automation permissions**:
 1. Go to **System Settings → Privacy & Security → Automation**
 2. Find **SupaSidebar** in the list
 3. Enable the **Finder** checkbox
-
-[PLACEHOLDER: Screenshot showing Finder automation permission]
+<br />
+<p align="center">
+  <img src="/assets/automation real.jpeg" alt="Automation Permission" width="800" />
+</p>
 
 **First Time:**
 When you first use Finder shortcuts, macOS will prompt for permission. Click **OK** to grant access.
@@ -58,7 +65,10 @@ When you first use Finder shortcuts, macOS will prompt for permission. Click **O
 **Multiple Selection:**
 Select multiple files/folders → Press **⌘⌃S** → All added at once
 
-[PLACEHOLDER: Screenshot showing multiple files being added to sidebar]
+<br />
+<p align="center">
+  <img src="/assets/saved link.jpeg" alt="Saved File" width="800" />
+</p>
 
 **Notification Feedback:**
 SupaSidebar shows a notification confirming how many items were added:
@@ -71,8 +81,6 @@ Press **⌘⌥A** to add the folder you're currently viewing in Finder, *ignorin
 
 **Use Case:**
 You're browsing through a project folder with files selected, but you want to save the folder itself - press **⌘⌥A**.
-
-[PLACEHOLDER: Video showing user navigating folders and pressing ⌘⌥A to save current location]
 
 ### Copy File Paths (⌘⌃C)
 
@@ -91,8 +99,6 @@ Selecting multiple items copies all paths, each on a new line:
 ```
 
 Perfect for documentation, terminal commands, or sharing file locations.
-
-[PLACEHOLDER: Screenshot showing clipboard contents with file paths]
 
 ## What You Can Add
 
@@ -120,7 +126,7 @@ Add applications for keyboard-driven launching:
 3. Press **⌘⌃S** to add them
 4. Optionally [pin](pinnedItems) them for ⌘⌥1-9 shortcuts
 
-[PLACEHOLDER: Screenshot showing applications added to sidebar]
+
 
 ## Organization
 
@@ -141,7 +147,10 @@ Example structure:
   └── 📄 template.docx
 ```
 
-[PLACEHOLDER: Screenshot showing file/folder organization in sidebar]
+<br />
+<p align="center">
+  <img src="/assets/folder.jpeg" alt="folder" width="800" />
+</p>
 
 ### Smart Folders for Files
 
